[gd_scene load_steps=16 format=3 uid="uid://buk3vrt77hvav"]

[ext_resource type="StyleBox" uid="uid://drb4jb5uwpbil" path="res://Resources/team & stylebox/hover_button.tres" id="2_7plpx"]
[ext_resource type="Shader" uid="uid://xe3w7kqi8snw" path="res://Resources/shaders/new_shader.gdshader" id="2_j8qi8"]
[ext_resource type="PackedScene" uid="uid://bl0h3mi0qhq4f" path="res://Scene/_main_s/Village.tscn" id="2_uprpa"]
[ext_resource type="Script" uid="uid://bul8m7bu0f0td" path="res://UI/mainmenu/mainmenu.gd" id="3_1ru74"]
[ext_resource type="StyleBox" uid="uid://b7ibnlkli38o" path="res://Resources/team & stylebox/normal_button.tres" id="3_j8qi8"]
[ext_resource type="PackedScene" uid="uid://b76niexsnwx45" path="res://UI/effects/transitionscreen.tscn" id="5_taypn"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_xdm7g"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_bottom_color = Color(0.19607843, 0.19607843, 0.19607843, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
energy_multiplier = 0.1

[sub_resource type="Sky" id="Sky_7yd8q"]
sky_material = SubResource("ProceduralSkyMaterial_xdm7g")

[sub_resource type="Environment" id="Environment_mtw86"]
background_mode = 2
sky = SubResource("Sky_7yd8q")
ambient_light_sky_contribution = 0.3
ambient_light_energy = 0.4
tonemap_mode = 2
ssr_enabled = true
ssao_enabled = true
sdfgi_enabled = true
glow_enabled = true
volumetric_fog_enabled = true
volumetric_fog_density = 0.1
volumetric_fog_albedo = Color(0.78431374, 0.78431374, 0.78431374, 1)
volumetric_fog_emission = Color(0.19607843, 0.3137255, 0.47058824, 1)
volumetric_fog_emission_energy = 0.3
volumetric_fog_sky_affect = 0.3

[sub_resource type="Theme" id="Theme_taypn"]
Button/styles/hover = ExtResource("2_7plpx")
Button/styles/normal = ExtResource("3_j8qi8")

[sub_resource type="Theme" id="Theme_7plpx"]
Label/colors/font_color = Color(1, 1, 1, 1)
Label/colors/font_shadow_color = Color(0, 0, 0, 1)
Label/constants/shadow_offset_x = 5
Label/constants/shadow_offset_y = 5
Label/constants/shadow_outline_size = 10

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gdknk"]
shader = ExtResource("2_j8qi8")
shader_parameter/overlay = false
shader_parameter/scanlines_opacity = 0.0
shader_parameter/scanlines_width = 0.10000000475
shader_parameter/grille_opacity = 0.0
shader_parameter/resolution = Vector2(1280, 720)
shader_parameter/pixelate = true
shader_parameter/roll = true
shader_parameter/roll_speed = 1.0
shader_parameter/roll_size = 15.0
shader_parameter/roll_variation = 1.8
shader_parameter/distort_intensity = 0.05
shader_parameter/noise_opacity = 0.4
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.10000000475
shader_parameter/aberration = 0.00100004754750004
shader_parameter/brightness = 0.65
shader_parameter/discolor = true
shader_parameter/warp_amount = 1.0
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5

[sub_resource type="Animation" id="Animation_1ru74"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("background/SubViewportContainer/SubViewport/Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(5, 2, 6)]
}

[sub_resource type="Animation" id="Animation_sgvr7"]
resource_name = "camera_animation"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("background/SubViewportContainer/SubViewport/Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3.02),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(5, 2, 6), Vector3(6, 2, 6), Vector3(7, 2.5, 6), Vector3(7.25, 3, 6)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1ru74"]
_data = {
&"RESET": SubResource("Animation_1ru74"),
&"camera_animation": SubResource("Animation_sgvr7")
}

[node name="mainmenu" type="CanvasLayer"]
script = ExtResource("3_1ru74")

[node name="background" type="Node3D" parent="."]

[node name="SubViewportContainer" type="SubViewportContainer" parent="background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="background/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="background/SubViewportContainer/SubViewport"]
transform = Transform3D(0.9659259, 0, -0.258819, 0, 1, 0, 0.258819, 0, 0.9659259, 5, 2, 6)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="background"]
transform = Transform3D(0.7071068, 0.61237246, -0.35355335, 0, 0.5, 0.8660254, 0.7071068, -0.61237246, 0.35355335, 0, 18, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="background"]
environment = SubResource("Environment_mtw86")

[node name="Village" parent="background" instance=ExtResource("2_uprpa")]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_taypn")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -214.0
offset_right = 549.0
offset_bottom = 214.0
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="Name_Label" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_7plpx")
theme_override_font_sizes/font_size = 65
text = "Digital Sins"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="NewGame_Button" type="Button" parent="Control/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "NewGame"

[node name="LoadGame_Button" type="Button" parent="Control/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "LoadGame"

[node name="Option_Button" type="Button" parent="Control/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Option"

[node name="Control_Button" type="Button" parent="Control/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Control"

[node name="Credit_Button" type="Button" parent="Control/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Credit"

[node name="Quit_Button" type="Button" parent="Control/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="transitionscreen" parent="." instance=ExtResource("5_taypn")]

[node name="ShaderLayer" type="CanvasLayer" parent="."]

[node name="CRT_Filter" type="ColorRect" parent="ShaderLayer"]
material = SubResource("ShaderMaterial_gdknk")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1ru74")
}
autoplay = "camera_animation"
speed_scale = 0.25

[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/VBoxContainer/NewGame_Button" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/VBoxContainer/LoadGame_Button" to="." method="_on_load_game_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/VBoxContainer/Option_Button" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/VBoxContainer/Control_Button" to="." method="_on_control_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/VBoxContainer/Credit_Button" to="." method="_on_credit_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/VBoxContainer/Quit_Button" to="." method="_on_quit_button_pressed"]
